[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/enemies/Turret.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/turret.png" type="Texture" id=2]
[ext_resource path="res://entities/enemies/Projectile.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 331.665

[node name="Turret" type="Sprite"]
texture = ExtResource( 2 )
script = ExtResource( 1 )
projectile_scene = ExtResource( 3 )

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 0, -20 )

[node name="Timer" type="Timer" parent="."]

[node name="DetectionPlayer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionPlayer"]
shape = SubResource( 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="DetectionPlayer" to="." method="_on_DetectionPlayer_body_entered"]
[connection signal="body_exited" from="DetectionPlayer" to="." method="_on_DetectionPlayer_body_exited"]
